--- a/template.yaml
+++ b/template.yaml
@@ -57,14 +57,8 @@ Resources:
                         type: array
                         items:
                           type: string
-                '403':
-                  content:
-                    application/json:
-                      schema:
-                        title: Products
-                        type: array
-                        items:
-                          type: string
+                '400':
+                  $ref: '#/components/responses/Error'
               requestBody:
                 required: true
                 content:
@@ -104,6 +98,31 @@ Resources:
                 responses:
                   default:
                     statusCode: 200
+                  ".*schema validation.*":
+                    statusCode: 400
+                    responseTemplates:
+                      application/json: !Sub |
+                        {
+                          "message": "$input.path('$.errorMessage')"
+                        }
+        components:
+          schemas:
+            GenericError:
+              title: Generic Error
+              type: object
+              properties:
+                message:
+                  type: string
+          responses:
+            200Empty:
+              description: "Default OK response"
+            Error:
+              description: Error Response
+              content:
+                application/json:
+                  schema:
+                    $ref: '#/components/schemas/GenericError'
+
 
 
   HomerAPILogGroup:
