--- a/layers/requirements.txt
+++ b/layers/requirements.txt
@@ -1,4 +1,4 @@
-requests
-cloudscraper
-aws-lambda-powertools
-backoff
+requests==2.27.1
+cloudscraper==1.2.60
+aws-lambda-powertools==1.25.6
+backoff==1.11.1
