--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ aws-lambda-powertools = "^1.25.6"
 requests = "^2.27.1"
 cloudscraper = "^1.2.60"
 backoff = "^1.11.1"
+dataclasses-json = "^0.5.7"
 
 [tool.poetry.dev-dependencies]
 black = "*"
