--- a/template.yaml
+++ b/template.yaml
@@ -246,6 +246,27 @@ Resources:
                 Resource:
                   - !GetAtt GetReadableProductsFunction.Arn
 
+  GeonetQuakesStateMachineRole:
+      Type: AWS::IAM::Role
+      Properties:
+          AssumeRolePolicyDocument:
+              Version: 2012-10-17
+              Statement:
+                  - Effect: Allow
+                    Principal:
+                        Service: states.amazonaws.com
+                    Action: sts:AssumeRole
+          Path: /
+          Policies:
+            - PolicyName: StatesExecutionPolicy
+              PolicyDocument:
+                  Version: 2012-10-17
+                  Statement:
+                      - Effect: Allow
+                        Action:
+                            - lambda:InvokeFunction
+                        Resource:
+                            - !Sub ${GetGeonetQuakesFunction.Arn}
 
 Outputs:
   HomerAPIBase:
